--- a/Project/app/src/main/res/layout/activity_main.xml
+++ b/Project/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,12 @@
     tools:context="vet.helloworld.MainActivity">
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.571"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -20,8 +22,20 @@
         android:id="@+id/imageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@android:drawable/btn_minus"
-        tools:layout_editor_absoluteX="162dp"
-        tools:layout_editor_absoluteY="146dp" />
+        android:adjustViewBounds="false"
+        android:onClick="onClick"
+        app:srcCompat="@drawable/vitaliev_pic"
+        tools:layout_editor_absoluteX="169dp"
+        tools:layout_editor_absoluteY="132dp" />
+
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        tools:layout_editor_absoluteX="61dp"
+        tools:layout_editor_absoluteY="340dp" />
 
 </android.support.constraint.ConstraintLayout>
